Fix cards and jump to top of page on click

--- a/foundation.css
+++ b/foundation.css
@@ -2259,9 +2259,10 @@ select {
     padding-left: 3rem; }
 
 .card {
+  min-height: 14rem;
   margin-bottom: 1rem;
-  border: 1px solid #e6e6e6;
-  border-radius: 0;
+  border: 2px solid #e6e6e6;
+  border-radius: 10%;
   background: #fefefe;
   -webkit-box-shadow: none;
           box-shadow: none;
